tests/ui/transmute-ref-illegal-lifetime.nightly.stderr
error[E0463]: can't find crate for `zerocopy`
  --> $DIR/transmute-ref-illegal-lifetime.rs:14:27
   |
14 |     let _: &'static u64 = zerocopy::transmute_ref!(&x);
   |                           ^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
